refactor: 16번 수정 사항 isBlank() input.trim().isEmpty() -> input.isBlank()로 수정